tests/fixtures/valid/final_expr_int.torel
unit fixtures.final_expr_int;

export proc main() -> Int32 {
    42
}
