tests/fixtures/invalid/assign_unknown_local.torel
unit fixtures.assign_unknown_local;

export proc main() -> Int32 {
    answer = 42;
    return answer;
}
